# changebrief

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
changebrief/: __init__.py  cli.py
changebrief/commands/: ai_context.py  cache.py  validate.py
changebrief/core/: config.py  context.py  error_handler.py  exceptions.py  exit_codes.py  redaction.py  validator.py
changebrief/core/ai_context/: __init__.py  build_extractor.py  build_synthesizer.py  builder.py  composer.py  config_loader.py  conventions.py  dependency_learner.py  enricher.py  generator.py  models.py  scanner.py
changebrief/core/ai_context/languages/: __init__.py  base.py  generic.py  go.py  java.py  javascript.py  python.py  registry.py  (+2 more)
changebrief/core/analyzer/: confidence_scorer.py  diff_utils.py  impact_mapper.py  intent_classifier.py  risk_classifier.py
changebrief/core/cache/: store.py
changebrief/core/llm/: _openai_tools.py  calllog.py  guard.py  validation_planner.py
changebrief/core/models/: __init__.py
changebrief/core/services/: __init__.py  validation_service.py
changebrief/utils/: paths.py
tests/: conftest.py  test_ai_context_build.py  test_ai_context_build_rich.py  test_ai_context_cli.py  test_ai_context_dep_helpers.py  test_ai_context_enricher.py  test_ai_context_enricher_merge_into_sections.py  test_ai_context_generator.py  test_ai_context_init_enrich_deps.py  test_ai_context_layered_repo.py  test_ai_context_scanner.py  test_cli.py  test_confidence_scorer.py  test_intent_classifier.py  test_llm_calllog.py  test_risk_classifier.py
